example of child to parent communication

--- a/src/app/component-communication/parentToChild/child/child.component.html
+++ b/src/app/component-communication/parentToChild/child/child.component.html
@@ -1,8 +1,8 @@
 <div style="text-align: center;"> 
     <h2>child component</h2>     
     
-    parent id is {{id}} <br/>
-    (property  received from the parent component). 
+    parent id is {{ idPassedToChild }} <br/>
+    (property received from the parent component). 
 
 </div> 
   
