simple service pulling an api example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 Child to Parent Communication: 
 <app-parent2></app-parent2>
 
@@ -7,4 +7,5 @@ Child to Parent Communication:
 <app-parent></app-parent>
 
 <app-view-child-parent></app-view-child-parent>
-
+ -->
+<app-news></app-news>
