routes still not working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,22 @@
-<!-- 
-Child to Parent Communication: 
-<app-parent2></app-parent2>
+
+<h3>Parent / Child Component Communication (comms)</h3>
+<ul>
+    <li><a routerLink="/parent-down" routerLinkActive="active">Parent to Child comms (basic via input)</a></li>
+    <li><a routerLink="/child-up" routerLinkActive="active">Child to Parent comms via output</a></li>
+    <li><a routerLink="/parent-viewchild" routerLinkActive="active">Child to Parent via ViewChild</a></li>
+
+</ul>
+<h3>Parent / Child Component Communication</h3>
+<ul>
+    <li><a routerLink="/news" routerLinkActive="active">getting data from a Service (aka news)</a></li>
+    <li><a routerLink="/data-to-service" routerLinkActive="active">Sending data to app.component via Service (tbd) </a></li>
+</ul>
+<!-- <app-parent2></app-parent2> -->
 
 <hr>
 
-<app-parent></app-parent>
+<!-- <app-parent></app-parent> -->
 
-<app-view-child-parent></app-view-child-parent>
- -->
-<app-news></app-news>
+<!-- <app-view-child-parent></app-view-child-parent> -->
+
+<!-- <app-news></app-news> -->
