add service comms, click to send message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <li><a routerLink="/parent-down" routerLinkActive="active">Parent to Child comms (basic via input)</a></li>
     <li><a routerLink="/child-up" routerLinkActive="active">Child to Parent comms via output</a></li>
     <li><a routerLink="/parent-viewchild" routerLinkActive="active">Child to Parent via ViewChild</a></li>
+    <li><a routerLink="/child-to-child" routerLinkActive="active">Child to Child via Service </a></li>
 
 </ul>
 <h3>Parent / Child Component Communication</h3>
