linked up that page but service pages still have errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,19 +6,20 @@
     <li><a routerLink="/parent-viewchild" routerLinkActive="active">Child to Parent via ViewChild</a></li>
     <li><a routerLink="/child-to-child" routerLinkActive="active">Child to Child via Service </a></li>
 
+
 </ul>
+
 <h3>Parent / Child Component Communication</h3>
 <ul>
     <li><a routerLink="/news" routerLinkActive="active">getting data from a Service (aka news)</a></li>
     <li><a routerLink="/data-to-service" routerLinkActive="active">Sending data to app.component via Service (tbd) </a></li>
 </ul>
-<!-- <app-parent2></app-parent2> -->
+
+
+<h3>Creating Custom Directives </h3>
+<ul>
+    <li><a routerLink="/directive-example" routerLinkActive="active">Custom Directive to change DOM elements/ attributes/ appearence  </a></li>
+</ul>
 
 <hr>
 <router-outlet></router-outlet>
-
-<!-- <app-parent></app-parent> -->
-
-<!-- <app-view-child-parent></app-view-child-parent> -->
-
-<!-- <app-news></app-news> -->
