add bootstrap so it less ugly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
 
 <h3>Parent / Child Component Communication (comms)</h3>
 <ul>
-    <li><a routerLink="/parent-down" routerLinkActive="active">Parent to Child comms (basic via input)</a></li>
-    <li><a routerLink="/child-up" routerLinkActive="active">Child to Parent comms via output</a></li>
-    <li><a routerLink="/parent-viewchild" routerLinkActive="active">Child to Parent via ViewChild</a></li>
-    <li><a routerLink="/child-to-child" routerLinkActive="active">Child to Child via Service </a></li>
+    <li><a routerLink="/parent-down" routerLinkActive="active" type="button" class="btn btn-secondary">Parent to Child comms (basic via input)</a></li>
+    <li><a routerLink="/child-up" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Parent comms via output</a></li>
+    <li><a routerLink="/parent-viewchild" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Parent via ViewChild</a></li>
+    <li><a routerLink="/child-to-child" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Child via Service </a></li>
 
 
 </ul>
 
 <h3>Parent / Child Component Communication</h3>
 <ul>
-    <li><a routerLink="/news" routerLinkActive="active">getting data from a Service (aka news)</a></li>
-    <li><a routerLink="/data-to-service" routerLinkActive="active">Sending data to app.component via Service (tbd) </a></li>
+    <li><a routerLink="/news" routerLinkActive="active" type="button" class="btn btn-secondary">getting data from a Service (aka news)</a></li>
+    <li><a routerLink="/data-to-service" routerLinkActive="active" type="button" class="btn btn-secondary disabled">Sending data to app.component via Service (tbd) </a></li>
 </ul>
 
 
 <h3>Creating Custom Directives </h3>
 <ul>
-    <li><a routerLink="/directive-example" routerLinkActive="active">Custom Directive to change DOM elements/ attributes/ appearence  </a></li>
+    <li><a routerLink="/directive-example" routerLinkActive="active" type="button" class="btn btn-secondary">Custom Directive to change DOM elements/ attributes/ appearence  </a></li>
 </ul>
 
 <hr>
