add basic built in pipe example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,6 @@
     <li><a routerLink="/child-up" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Parent comms via output</a></li>
     <li><a routerLink="/parent-viewchild" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Parent via ViewChild</a></li>
     <li><a routerLink="/child-to-child" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Child via Service </a></li>
-
-
 </ul>
 
 <h3>Parent / Child Component Communication</h3>
@@ -15,11 +13,20 @@
     <li><a routerLink="/data-to-service" routerLinkActive="active" type="button" class="btn btn-secondary disabled">Sending data to app.component via Service (tbd) </a></li>
 </ul>
 
-
-<h3>Creating Custom Directives </h3>
+<h3>Directives </h3>
 <ul>
     <li><a routerLink="/directive-example" routerLinkActive="active" type="button" class="btn btn-secondary">Custom Directive to change DOM elements/ attributes/ appearence  </a></li>
 </ul>
+
+<h3>Pipes </h3>
+<ul>
+    <li><a routerLink="/pipe-examples1" routerLinkActive="active" type="button" class="btn btn-secondary">Built in "Pipes" to alter properties  </a></li>
+</ul>
+
+<p><i>
+    (//Note to self: Change this app component later to be more clean //) <br/>
+    (// also fix this crazy nav//)
+</i></p>
 
 <hr>
 <router-outlet></router-outlet>
