add basic json pipe example

--- a/src/app/pipes/pipe-examples/pipe-examples.component.html
+++ b/src/app/pipes/pipe-examples/pipe-examples.component.html
@@ -4,3 +4,13 @@
 <p><b>pipe: lowercase: </b> {{ exampleArticleTitle | lowercase }} </p>
 <p><b>pipe: uppercase: </b> {{ exampleArticleTitle | uppercase }} </p>
 <p><b>pipe: titlecase: </b> {{ exampleArticleTitle | titlecase }} </p>
+
+<hr/>
+<p><b>pipe: json: </b> <br>
+    {{ exampleJson | json }} <br>
+    <i>// this is a great way to preview json variable data - you'll use it a lot</i>
+</p>
+
+<p>
+    <i>// next exercise - to build a custom pipe </i>
+</p>
