first add of reactive forms testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<h3>Parent / Child Component Communication (comms)</h3>
+<h3>Parent / Child Communication (comms)</h3>
 <ul>
     <li><a routerLink="/parent-down" routerLinkActive="active" type="button" class="btn btn-secondary">Parent to Child comms (basic via input)</a></li>
     <li><a routerLink="/child-up" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Parent comms via output</a></li>
@@ -7,7 +7,7 @@
     <li><a routerLink="/child-to-child" routerLinkActive="active" type="button" class="btn btn-secondary">Child to Child via Service </a></li>
 </ul>
 
-<h3>Parent / Child Component Communication</h3>
+<h3>Parent / Child Comms</h3>
 <ul>
     <li><a routerLink="/news" routerLinkActive="active" type="button" class="btn btn-secondary">getting data from a Service (aka news)</a></li>
     <li><a routerLink="/data-to-service" routerLinkActive="active" type="button" class="btn btn-secondary disabled">Sending data to app.component via Service (tbd) </a></li>
@@ -25,6 +25,17 @@
 
 <p><i>
     (//Note to self: Change this app component later to be more clean //) <br/>
+    (// also fix this crazy nav//)
+</i></p>
+
+<hr>
+
+<h3>Forms </h3>
+<ul>
+    <li><a routerLink="/forms" routerLinkActive="active" type="button" class="btn btn-secondary">Reactive Forms  </a></li>
+</ul>
+
+<p><i>    (//Note to self: Change this app component later to be more clean //) <br/>
     (// also fix this crazy nav//)
 </i></p>
 
