--- a/src/app/forms/reactive-forms/reactive-forms.component.html
+++ b/src/app/forms/reactive-forms/reactive-forms.component.html
@@ -1,17 +1,50 @@
 <form [formGroup]="bioSection" (ngSubmit)="callingFunction()">
+  <h3>Bio Details
+</h3>
 
-    <label>
-      First Name:
-      <input type="text" formControlName="firstName">
-    </label>
+<label>
+  First Name:
+  <input type="text" formControlName="firstName">
+</label> <br>
+<label>
+  Last Name:
+  <input type="text" formControlName="lastName">
+</label> <br>
+<label>
+  Age:
+  <input type="text" formControlName="age">
+</label>
+<div formGroupName="stackDetails">
+  <h3>Stack Details</h3>
+
   <label>
-      Last Name:
-      <input type="text" formControlName="lastName">
-    </label>
+    Stack:
+    <input type="text" formControlName="stack">
+  </label> <br>
+
   <label>
-      Age:
-      <input type="text" formControlName="age">
-    </label>
-  <button type="submit">Submit Application</button>
-  </form>
-  
+    Experience:
+    <input type="text" formControlName="experience">
+  </label>
+</div>
+<div formGroupName="address">
+  <h3>Address</h3>
+
+  <label>
+    Country:
+    <input type="text" formControlName="country">
+  </label> <br>
+
+  <label>
+    City:
+    <input type="text" formControlName="city">
+  </label>
+</div>
+<button type="submit" [disabled]="!bioSection.valid">Submit Application</button>
+<p>
+  Real-time data: {{ bioSection.value | json }}
+</p>
+<p>
+  Your form status is : {{ bioSection.status }}
+</p>
+</form>
