--- a/src/app/forms/reactive-forms/reactive-forms.component.html
+++ b/src/app/forms/reactive-forms/reactive-forms.component.html
@@ -1,5 +1,8 @@
-<form [formGroup]="bioSection" (ngSubmit)="callingFunction()">
-  <h3>Bio Details - Validators Broken - still a work in progress </h3>
+<div class="container">
+  <div class="row">
+
+<form [formGroup]="newForm" (ngSubmit)="callingFunction()">
+  <h3>Enter Your Info  </h3>
 
 <label>
   First Name:
@@ -17,8 +20,9 @@
 
 <div *ngIf="f.email.touched && f.email.errors" class="alert alert-danger">
   <div *ngIf="f.email.errors.required">email is required.</div>
-  <div *ngIf="f.email.errors.minlength">email should be 3 character.</div>
-  <div *ngIf="f.email.errors.cannotContainSpace">em can not contain space.</div>
+  <!-- <div *ngIf="f.email.errors.minlength">email should be 3 character.</div> -->
+  <div *ngIf="f.email.errors.cannotContainSpace">emai can not contain space.</div>
+  <div *ngIf="f.email.errors.pattern">pls check that it's a valid email</div>
 </div>
 
 
@@ -52,11 +56,14 @@
     <input type="text" formControlName="city">
   </label>
 </div>
-<button type="submit" [disabled]="!bioSection.valid">Submit Application</button>
+<button type="submit" [disabled]="!newForm.valid">Submit Application</button>
 <p>
-  Real-time data: {{ bioSection.value | json }}
+  Real-time data: {{ newForm.value | json }}
 </p>
 <p>
-  Your form status is : {{ bioSection.status }}
+  Your form status is : {{ newForm.status }}
 </p>
 </form>
+
+</div>
+</div>
