added conditional validation but in wrong compo

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -53,6 +53,7 @@
                
                     <a routerLink="/forms" routerLinkActive="active" type="button" class="dropdown-item">Reactive Forms  </a>
                     <a routerLink="/multi-step-form" routerLinkActive="active" type="button" class="dropdown-item">Multi Step Form  </a>
+                    <a routerLink="/conditional-form" routerLinkActive="active" type="button" class="dropdown-item">Conditional Form  </a>
 
                 </div>
             </div><!-- END .btn-group -->
