add dynamic conditional fields example

--- a/src/app/forms/conditional-validation/conditional-validation.component.less
+++ b/src/app/forms/conditional-validation/conditional-validation.component.less
@@ -5,3 +5,10 @@
   .ng-invalid.ng-dirty:not(form), .ng-invalid:not(form).form-submitted {
     border: solid 2px lightcoral;
   }
+label {
+  min-width: 94px;
+}
+form > div {
+  padding: 4px;
+}
+
