--- a/src/app/forms/conditional-form-fields/conditional-form-fields.component.html
+++ b/src/app/forms/conditional-form-fields/conditional-form-fields.component.html
@@ -1,30 +1,47 @@
-<h3 class="text-center">User Details</h3>
-<hr>
-<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" formControlName="email" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Enter email"/>
+<form [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
+  <div class="card m-3">
+      <h5 class="card-header">Dynamic Reactive Form Fields</h5>
+      <div class="card-body">
+          <div class="form-row">
+              <div class="form-group">
+                  <label>How Many Tickets</label>
+                  <select formControlName="numberOfTickets" class="form-control" (change)="onChangeTickets($event)" [ngClass]="{ 'is-invalid': submitted && f.numberOfTickets.errors }">
+                      <option value=""></option>
+                      <option *ngFor="let i of [1,2,3,4]">{{i}}</option>
+                  </select>
+                  <div *ngIf="submitted && f.numberOfTickets.errors" class="invalid-feedback">
+                      <div *ngIf="f.numberOfTickets.errors.required">Number of tickets is required</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div *ngFor="let ticket of t.controls; let i = index" class="list-group list-group-flush">
+          <div class="list-group-item">
+              <h5 class="card-title">Ticket {{i + 1}}</h5>
+              <div [formGroup]="ticket" class="form-row">
+                  <div class="form-group col-6">
+                      <label>Name</label>
+                      <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && ticket.controls.name.errors }" />
+                      <div *ngIf="submitted && ticket.controls.name.errors" class="invalid-feedback">
+                          <div *ngIf="ticket.controls.name.errors.required">Name is required</div>
+                      </div>
+                  </div>
+                  <div class="form-group col-6">
+                      <label>Email</label>
+                      <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && ticket.controls.email.errors }" />
+                      <div *ngIf="submitted && ticket.controls.email.errors" class="invalid-feedback">
+                          <div *ngIf="ticket.controls.email.errors.required">Email is required</div>
+                          <div *ngIf="ticket.controls.email.errors.email">Email must be a valid email address</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="card-footer text-center">
+          <button class="btn btn-primary mr-1">Buy Tickets</button>
+          <button class="btn btn-secondary mr-1" type="reset" (click)="onReset()">Reset</button>
+          <button class="btn btn-secondary" type="button" (click)="onClear()">Clear</button>
+      </div>
   </div>
-  <div>
-    <label for="username">Username</label>
-    <input type="text" id="username" formControlName="username" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Username"/>
-  </div>
-  <div>
-    <input type="radio" formControlName="userCategory" id="userCategory2" [ngClass]="{'form-submitted': formSubmitted}" value="employee"/> Employee
-    <input type="radio" formControlName="userCategory" id="userCategory1" [ngClass]="{'form-submitted': formSubmitted}" value="student"/> Student
-  </div>
-  <div>
-    <label for="institution">Institution </label>
-    <input type="text" id="institution" formControlName="institution" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Enter institution"/>
-  </div>
-  <div>
-    <label for="company">Company</label>
-    <input type="text" id="company" formControlName="company" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Enter company"/>
-  </div>
-  <div>
-    <label for="salary">Salary</label>
-    <input type="text" id="salary" formControlName="salary" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Enter salary"/>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
