--- a/src/app/products/edit-product/edit-product.component.html
+++ b/src/app/products/edit-product/edit-product.component.html
@@ -1,1 +1,24 @@
-<p>edit-product works!</p>
+<h4 *ngIf="!allowEdit">you're not allowed to edit</h4>
+<div *ngIf="allowEdit">
+<div class="form-group">
+  <label for="name">product Name</label>
+  <input
+    type="text"
+    id="name"
+    class="form-control"
+    [(ngModel)]="prodName">
+</div>
+<div class="form-group">
+  <label for="status">product Status</label>
+  <select
+    id="status"
+    class="form-control"
+    [(ngModel)]="prodStatus">
+    <option value="online">Online</option>
+    <option value="offline">Offline</option>
+  </select>
+</div>
+<button
+  class="btn btn-primary"
+  (click)="onUpdateproduct()">Update product</button>
+</div>
