wire-up product child param components

--- a/src/app/products/edit-product/edit-product.component.html
+++ b/src/app/products/edit-product/edit-product.component.html
@@ -14,8 +14,9 @@
     id="status"
     class="form-control"
     [(ngModel)]="prodStatus">
-    <option value="online">Online</option>
-    <option value="offline">Offline</option>
+    <option value="available">available</option>
+    <option value="on-order">on-order</option>
+    <option value="out-of-stock">out-of-stock</option>
   </select>
 </div>
 <button
