--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,25 @@
-<p>products works!</p>
+<p>
+  <!-- {{ products | json}} -->
+</p>
+<div class="row">
+  <div class="col-xs-12 col-sm-4">
+    <div class="list-group">
+      <a
+      [routerLink]="['/products', item.id ]"
+      [queryParams]="{'allowEdit': item.id === 3 ? '1' : 0 }"
+      fragment="loading"
+        class="list-group-item"
+        *ngFor="let item of products">
+        <!-- [routerLink]="['/servers', item.id, 'edit', server.name ]" -->
+        <!-- [routerLink]="['/servers', 5, 'edit']" -->
+        {{ item.title }}
+      </a>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-4">
+    <router-outlet></router-outlet>
+    <!-- <app-edit-server></app-edit-server><hr>
+    <app-server></app-server> -->
+  </div>
+</div>
+
