--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,1 +1,8 @@
-<p>product works!</p>
+<div class="container">
+  <div class="row  ">
+
+    <h5 class="pt-4" style="color: red">{{ product.title }}</h5>
+    <p>Product status is {{ product.status }}</p>
+    <button class="btn btn-primary" (click)="onEdit()">Edit product </button>
+  </div>
+</div>
