--- a/src/app/forms/conditional-validation/conditional-validation.component.html
+++ b/src/app/forms/conditional-validation/conditional-validation.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-6">
-      
+
       <h3 class="text-center">User Details</h3>
       <hr>
       <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
@@ -29,9 +29,19 @@
           <label for="salary">Salary</label>
           <input type="text" id="salary" formControlName="salary" [ngClass]="{'form-submitted': formSubmitted}" placeholder="Enter salary"/>
         </div>
+
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default"
+          type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group"
+          *ngFor="let hobbyControl of form.get('hobbies').controls; let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      
+
     </div>
   </div>
 </div>
